# Loop_Hackathon

./: .gitignore  README.md  SWARM_PLAN.md  deploy-pwa.sh  package.json  pnpm-lock.yaml
.github/workflows/: pages.yml
Frontend/dev/: .gitignore  REDESIGN_PLAN.md  capacitor.config.ts  next.config.ts  package.json  pnpm-lock.yaml
backend/: .env.example  pyproject.toml
backend/.next/: _events_57345.json  _events_58017.json
backend/.next/dev/cache/: .rscinfo
backend/app/: config.py  main.py  obs.py  schemas.py
backend/app/agent/: client.py  prompts.py  tools.py
backend/app/api/routers/: credits.py  grid.py  household.py  loop.py  nudges.py  sun.py
backend/app/data/: models.py  seed.py  store.py
backend/app/ingest/: __init__.py  caiso.py  mock.py  nexla.py  nexla_feed.py  pricing.py  shadow.py  weather.py
backend/app/loop/: engine.py  scheduler.py
backend/app/loop/stages/: act.py  observe.py  plan.py  reflect.py
backend/app/notify/: __init__.py  zero_client.py
backend/app/vision/: __init__.py  scan.py
backend/tests/: conftest.py  test_flow.py  test_scan.py  test_sun.py
datasets/hardware-analytics/: 20260717_115226.json  20260717_115229.json  20260717_115239.json  20260717_115241.json  20260717_124301.json  20260717_124304.json  20260717_124315.json  20260717_124320.json  20260717_130133.json  IMG_4081.HEIC.json  IMG_4083.HEIC.json  IMG_4084.HEIC.json  IMG_4085.HEIC.json  README.md  dataset.json  meta.json
datasets/shadow_data/: README.md  (+2 more)
deploy/: Dockerfile  README.md  akash.sdl.yml
nexla/: pipelines.md  setup.sh
public/: butterfly.webm
(+132 files in other folders)
