[project]
name = "loop-backend"
version = "0.1.0"
description = "Autonomous agentic loop — fitness tracker for your house (electricity MVP)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.21",
    "pydantic-settings>=2.3",
    "anthropic>=0.39",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "pillow>=10.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
